fix (receive): File type overflow issue fix

--- a/app/receive/page.module.css
+++ b/app/receive/page.module.css
@@ -166,6 +166,7 @@
         }
         .type {
           text-align: center;
+          word-break: break-all;
         }
         .size {
           font-size: 1rem;
